# boating_gz

./: CMakeLists.txt  README.md  package.xml
example/: current.yaml  demo_launch.py  manual.yaml  sailboat.xacro  sydney_regatta.sdf  world_launch.py
example/mesh/: generate_wings.py  hull.stl  rudder.stl  wing.stl
hooks/: resource_paths.dsv.in
models/coast_waves/: model.sdf
src/: Anemometer.hh  Flow.hh  Hull.cc  LiftDrag.cc  PublisherPlugin.cc  PublisherPlugin.hh  WaveVisual.cc  WaveVisual.hh  Wavefield.cc  Wavefield.hh
worlds/: sydney_regatta.sdf
