<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>boating_gz</name>
  <version>0.1.0</version>
  <description>Base plugins to simulate (sail)boats in Gazebo</description>
  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>
  <license>GPL3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend condition="$GZ_VERSION > fortress">ros_gz_sim</exec_depend>
  <exec_depend condition="$GZ_VERSION == fortress">ros_ign_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
